--- a/calendar_scheduler/pubspec.yaml
+++ b/calendar_scheduler/pubspec.yaml
@@ -44,12 +44,14 @@ dependencies:
   dio: ^5.4.0
   provider: ^6.1.1
   uuid: ^4.2.2
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  drift_dev: 2.14.1
-  build_runner: 2.4.7
+  drift_dev: ^2.13.0
+  build_runner: ^2.4.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
